@@ -292,7 +292,8 @@ DPP_PROG_LINKER
 # Checks for libraries.
 # -----------------------------------------------------------------------------
 
-DPP_CHECK_DYNLOAD_LIB
+# The $USE_DYLD stuff is for Darwin.
+DPP_CHECK_DYNLOAD_LIB([USE_DYLD='N'], [USE_DYLD='Y'])
 DPP_HAVE_CPPUNIT([1.9.10])
 
 # Shared memory and synchronization primitives.
@@ -978,6 +979,7 @@ AC_SUBST(THREAD_SYS)
 AC_SUBST(HANDLE_ABS)
 AC_SUBST(SERIAL_PORT_ABS)
 AC_SUBST(SOCKET_ABS)
+AC_SUBST(USE_DYLD)
 
 AC_SUBST(CPPDOM_CXXFLAGS)
 AC_SUBST(CPPDOM_LIBS)
